# pamiq-vrchat

./: CONTRIBUTING.md  Dockerfile  Makefile  README.ja.md  README.md  pyproject.toml  run-sample.linux.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-on-gpu.yml  test.yml  type_check.yaml
docker/: Dockerfile  base.yml
obs_settings/: VRChatSceneCollection.Windows.json
src/: run_sample.py
src/pamiq_vrchat/: __init__.py  env.py
src/pamiq_vrchat/actuators/: __init__.py  control_models.py  mouse.py  osc.py
src/pamiq_vrchat/sensors/: __init__.py  audio.py  image.py
src/sample/: data.py  utils.py
src/sample/agents/: curiosity.py  temporal_encoding.py  unimodal_encoding.py
src/sample/env/: image_transforms.py
src/sample/environment/: action_transform.py  image_transforms.py
src/sample/models/: __init__.py  forward_dynamics.py  image_jepa.py  jepa.py  names.py  policy.py  temporal_encoder.py
src/sample/models/components/: audio_patchifier.py  image_patchifier.py  multi_categoricals.py  multi_discretes.py  multi_embeddings.py  patch_embedding.py  positional_embeddings.py  qlstm.py  sioconvps.py  stacked_features.py  stacked_hidden_state.py
src/sample/trainers/: forward_dynamics.py  image_jepa.py  jepa.py  ppo_policy.py  temporal_encoder.py
src/sample/trainers/components/: audio_jepa_multi_block_mask_collator.py
src/sample/transforms/: __init__.py  audio.py  image.py
tests/actuators/: test_control_models.py  test_mouse.py  test_osc.py
tests/pamiq_vrchat/: test_env.py
tests/pamiq_vrchat/actuators/: test_mouse.py
tests/pamiq_vrchat/sensors/: test_audio.py  test_image.py
tests/sample/: test_utils.py
tests/sample/agents/: test_curiosity.py  test_temporal_encoding.py  test_unimodal_encoding.py
tests/sample/env/: test_image_transform.py
tests/sample/environment/: test_action_transform.py  test_image_transform.py
tests/sample/models/: test_forward_dynamics.py  test_image_jepa.py  test_jepa.py  test_policy.py  test_temporal_encoder.py
tests/sample/models/components/: test_audio_patchifier.py  test_image_patchifier.py  test_multi_categoricals.py  test_multi_embeddings.py  test_patch_embedding.py  test_positional_embeddings.py  test_qlstm.py  test_sioconvps.py  test_stacked_hidden_state.py
tests/sample/trainers/: test_forward_dynamics.py  test_image_jepa.py  test_jepa.py  test_ppo_policy.py  test_sampler.py  test_temporal_encoder.py
tests/sample/trainers/components/: test_audio_jepa_multi_block_mask_collator.py  test_random_time_series_sampler.py
tests/sample/transforms/: test_audio.py  test_image.py
typings/pulsectl/: __init__.pyi  pulsectl.pyi
